Update Second-hand_car_price_prediction (1) (1) (1).ipynb

--- a/Second-hand_car_price_prediction (1) (1) (1).ipynb
+++ b/Second-hand_car_price_prediction (1) (1) (1).ipynb
@@ -3007,7 +3007,7 @@
    "id": "2567bdcc-a652-4016-8ae2-59ba1eaf9dee",
    "metadata": {},
    "source": [
-    "Accuracy is higher in decission tree model than linear regression model The data is overfitted with Decission Tree mode. So we will take Linear Regression Model Morever, Power, Kilomenters_Driven and Engine are the top three car price predictor"
+    "Accuracy is higher in decission tree model((82.99)) than linear regression model (79.57). So we will take Decission Tree Model Morever, Power, Kilomenters_Driven and Engine are the top three car price predictor"
    ]
   },
   {
